adding library ape, ggtree, phylobase

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>4-VA JMU 2017 Biological Data Science Workshop</title>
+<title>Biological Data Science Workshop</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -383,7 +383,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">JMU2017</a>
+      <a class="navbar-brand" href="index.html">ICor2020</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -496,7 +496,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">4-VA JMU 2017 Biological Data Science Workshop</h1>
+<h1 class="title toc-ignore">Biological Data Science Workshop</h1>
 
 </div>
 
@@ -506,7 +506,7 @@ div.tocify {
 <h2>General Information</h2>
 <div id="logistics" class="section level3">
 <h3>Logistics</h3>
-<p><strong><em>When</em>: June 2017</strong></p>
+<p><strong><em>When</em>: Dec 2020</strong></p>
 <table>
 <thead>
 <tr class="header">
