--- a/help.html
+++ b/help.html
@@ -383,7 +383,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">JMU2017</a>
+      <a class="navbar-brand" href="index.html">ICor2020</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
