--- a/Basic_Molecular.html
+++ b/Basic_Molecular.html
@@ -461,14 +461,14 @@ div.tocify {
     <li class="divider"></li>
     <li class="dropdown-header">--- Intermediate Course ---</li>
     <li>
-      <a href="r-basics.html">R Basics</a>
+      <a href="r-basics.html">R Basi</a>
     </li>
-    <li class="dropdown-header">--- Advance Course ---</li>
+    <li class="dropdown-header">--- Advance Courses ---</li>
     <li>
       <a href="Qiime2_Protokol.html">Get to know Qiime2</a>
     </li>
     <li>
-      <a href="Basic_Molecular.html">Get to know Qiime234</a>
+      <a href="Basic_Molecular.html">Get to know Qiime2345</a>
     </li>
   </ul>
 </li>
