--- a/index.html
+++ b/index.html
@@ -461,11 +461,31 @@ div.tocify {
     <li class="divider"></li>
     <li class="dropdown-header">--- Intermediate Course ---</li>
     <li>
-      <a href="r-basics.html">R Basics</a>
+      <a href="r-basics.html">R Basicssss</a>
     </li>
-    <li class="dropdown-header">--- Advance Course ---</li>
+    <li class="dropdown-header">--- Advance Courses ---</li>
     <li>
       <a href="Qiime2_Protokol.html">Get to know Qiime2</a>
+    </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    <span class="fas fa-book"></span>
+     
+    CSS Course
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="Basic_Molecular.html">Why Molecular Approaches</a>
+    </li>
+    <li>
+      <a href="Editing_Sequence.html">Lets move on</a>
+    </li>
+    <li>
+      <a href="DNA_Barcoding.html">Lets move on</a>
     </li>
   </ul>
 </li>
