--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Bionesia2020</a>
+      <a class="navbar-brand" href="index.html">Bionesia2021</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -461,7 +461,7 @@ div.tocify {
     <li class="divider"></li>
     <li class="dropdown-header">--- Intermediate Course ---</li>
     <li>
-      <a href="r-basics.html">R Basicssss</a>
+      <a href="r-basics.html">R Basics</a>
     </li>
     <li class="dropdown-header">--- Advance Courses ---</li>
     <li>
@@ -479,13 +479,16 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="Basic_Molecular.html">Why Molecular Approaches</a>
+      <a href="Basic_Molecular.html">A Starting Point</a>
     </li>
     <li>
-      <a href="Editing_Sequence.html">Lets move on</a>
+      <a href="Editing_Sequence.html">I Want to Understand More</a>
     </li>
     <li>
       <a href="DNA_Barcoding.html">Lets move on</a>
+    </li>
+    <li>
+      <a href="DNA_Barcoding.html">I feel Confidence</a>
     </li>
   </ul>
 </li>
