--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ div.tocify {
 </div>
 
 
-<p>This Metabarcoding workshop will introduces methods, tools, and software for reproducibly managing, manipulating, analyzing, and visualizing targeted sequencing data using the R statistical and unix computing environment.</p>
+<p>Kursus singkat ini akan memperkenalkan berbagai macam cara untuk menganalisis data genetik pada level dasar. Termasuk diantaranya adalah aplikasi yang digunakan untuk mengatur, memanipulasi, menganalisis dan memvisualisasikan data genetik dengan menggunakan aplikasi R yang tidak berbayar</p>
 <div id="general-information" class="section level2">
 <h2>General Information</h2>
 <div id="logistics" class="section level3">
@@ -514,9 +514,9 @@ div.tocify {
 <h4>Do I need a laptop?</h4>
 <p><strong><em>YES.</em></strong> You must have access to a computer on which you can install software. The class will be a mix of lecture, discussion, but primarily live coding. You must bring your laptop to each session. Bring your charging cable also. Please follow the <a href="setup.html">setup instructions</a> prior to the workshop.</p>
 </div>
-<div id="where-do-i-get-additional-help" class="section level4">
-<h4>Where do I get additional help?</h4>
-<p>Glad you asked! <a href="help.html">See here</a>.</p>
+<div id="informasi-penting-seputar-hak-cipta" class="section level4">
+<h4>Informasi penting seputar Hak Cipta</h4>
+<p>Segala informasi dan material yang kami berikan disini dilisensi oleh Creative Commons Attribution-Share Alike 4.0 International (CC BY-SA 4.0). (CC BY-SA 4.0) Detail tentang hak cipta dapat dilihat di akses di <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.id" class="uri">https://creativecommons.org/licenses/by-sa/4.0/deed.id</a></p>
 <hr />
 <p><small><strong><em>Attribution</em>:</strong> Course material is inspired by and/or modified in part from <a href="https://github.com/4va">4Va github</a>, <a href="http://stat545-ubc.github.io/">Jenny Bryan’s Stat 545 course</a>, <a href="http://software-carpentry.org/">Software Carpentry</a>, <a href="http://datacarpentry.org/">Data Carpentry</a>, <a href="http://varianceexplained.org/">David Robinson’s blog</a>, <a href="https://github.com/marschmi/NGS2015_RMarkdown_Reproducibility">Marian Schmidt’s MSU NGS Workshop</a>, <a href="http://biostat.mc.vanderbilt.edu/wiki/Main/DataSets?CGISESSID=10713f6d891653ddcbb7ddbdd9cffb79">Vanderbilt Department of BioStatistics Datasets</a>, and likely many others.</small></p>
 </div>
