--- a/data.html
+++ b/data.html
@@ -351,9 +351,23 @@ $(document).ready(function () {
 </ul></li>
 </ol>
 <ul>
+<li><a href="data/airway_metadata.csv">airway_metadata.csv</a></li>
+<li><a href="data/airway_scaledcounts.csv">airway_scaledcounts.csv</a></li>
+<li><a href="data/annotables_grch38.csv">annotables_grch38.csv</a></li>
+<li><a href="data/brauer2007_messy.csv">brauer2007_messy.csv</a></li>
+<li><a href="data/brauer2007_sysname2go.csv">brauer2007_sysname2go.csv</a></li>
+<li><a href="data/brauer2007_tidy.csv">brauer2007_tidy.csv</a></li>
+<li><a href="data/dmd.csv">dmd.csv</a></li>
+<li><a href="data/flu_aasequence.fasta">flu_aasequence.fasta</a></li>
+<li><a href="data/flu_genotype.csv">flu_genotype.csv</a></li>
+<li><a href="data/flu_tree_beast.tree">flu_tree_beast.tree</a></li>
+<li><a href="data/gapminder.csv">gapminder.csv</a></li>
+<li><a href="data/heartrate2dose.csv">heartrate2dose.csv</a></li>
 <li><a href="data/Latihan_barcoding_1.fas">Latihan_barcoding_1.fas</a></li>
 <li><a href="data/Latihan_barcoding_2.fas">Latihan_barcoding_2.fas</a></li>
 <li><a href="data/Latihan_tree_1.fas">Latihan_tree_1.fas</a></li>
+<li><a href="data/Latihan1">Latihan1</a></li>
+<li><a href="data/Latihan2">Latihan2</a></li>
 <li><a href="data/MB10B.040.001_CRE_DM_G06_036.ab1">MB10B.040.001_CRE_DM_G06_036.ab1</a></li>
 <li><a href="data/MB10B.040.001_CRK_DM_G06_036.ab1">MB10B.040.001_CRK_DM_G06_036.ab1</a></li>
 <li><a href="data/MB10B.040.002_CRE_DM_H06_034.ab1">MB10B.040.002_CRE_DM_H06_034.ab1</a></li>
@@ -364,6 +378,11 @@ $(document).ready(function () {
 <li><a href="data/MB10B.041.002_CRK_DM_B07_061.ab1">MB10B.041.002_CRK_DM_B07_061.ab1</a></li>
 <li><a href="data/MB10B.041.003_CRE_DM_C07_059.ab1">MB10B.041.003_CRE_DM_C07_059.ab1</a></li>
 <li><a href="data/MB10B.041.003_CRK_DM_C07_059.ab1">MB10B.041.003_CRK_DM_C07_059.ab1</a></li>
+<li><a href="data/nhanes_dd.csv">nhanes_dd.csv</a></li>
+<li><a href="data/nhanes.csv">nhanes.csv</a></li>
+<li><a href="data/SRP026387_metadata.csv">SRP026387_metadata.csv</a></li>
+<li><a href="data/SRP026387_scaledcounts.csv">SRP026387_scaledcounts.csv</a></li>
+<li><a href="data/stressEcho.csv">stressEcho.csv</a></li>
 <li><a href="data/tree_newick.nwk">tree_newick.nwk</a></li>
 <li><a href="data/Tugas_barcoding_1.fas">Tugas_barcoding_1.fas</a></li>
 </ul>
